--- a/src/pages/inventory.css
+++ b/src/pages/inventory.css
@@ -22,18 +22,25 @@ body {
 }
 
 header {
-    margin: 5px;
+    /* margin: 5px; */
+    padding: 10px;
     text-align: center;
 }
 
 footer {
+    margin: 0;
     display: flex;
     width: 100vw;
-    background-color: white;
+    min-height: 80px;
+}
+
+button {
+    background: transparent
 }
 
 .subBack {
-    width: 100%;
+    /* margin: 0 10%; */
+    width: 90%;
     height: 70vh;
     background-color: white;
     border: 3px solid;
@@ -59,11 +66,17 @@ footer {
 
 .setBtn {
     display: flex;
+    margin: -30px 0px 0;
     width: 100%;
     justify-content: space-around;
 }
 
 .setHome {
-    margin: 0 auto;
-    text-align: center;
+    margin-top: 20px;
+    margin-bottom: -10px;
+    background-color: white;
+    padding: 7px 0px;
+    border-radius: 100%;
+    /* background-shadow: 3px rgba(250, 250, 250,0.5); */
+    /* height: 40px; */
 }
